changed to local time

--- a/solar-control-dev/rootfs/usr/bin/templates/index.html
+++ b/solar-control-dev/rootfs/usr/bin/templates/index.html
@@ -50,7 +50,7 @@
                 <h3>Last Sunrise</h3>
                 {% if sunrise_time %}
                     <p class="value">{{ sunrise_time.split('T')[1].split('+')[0] }}</p>
-                    <p class="name">Today's Sunrise</p>
+                    <p class="name">Today's Sunrise (Local Time)</p>
                 {% else %}
                     <p class="value">Not available</p>
                 {% endif %}
