--- a/solar-control-dev/rootfs/usr/bin/templates/index.html
+++ b/solar-control-dev/rootfs/usr/bin/templates/index.html
@@ -6,6 +6,17 @@
 {% block heading %}Solar Control Dashboard{% endblock %}
 
 {% block content %}
+    <style>
+        h1 {
+            text-align: center;
+            margin: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 60px;
+        }
+    </style>
+    
     <div class="nav-menu">
         <a href="{{ url_for('configure_grid') }}" class="button">Configure Grid</a>
         <a href="{{ url_for('configure_battery') }}" class="button">Configure Battery</a>
